# cipdb

./: Makefile  README.md  pyproject.toml
examples/: demo.py
src/cipdb/: __init__.py  __main__.py  _core.py
tests/cipdb/: test___init__.py  test__core.py
