[project]
name = "cipdb"
version = "0.1.0"
description = "Conditional iPDB - Simple conditional debugging for Python"
authors = [
    {name = "ywatanabe", email = "Yusuke.Watanabe@scitex.ai"}
]
maintainers = [
    {name = "ywatanabe", email = "Yusuke.Watanabe@scitex.ai"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["debugging", "ipdb", "pdb", "conditional", "breakpoint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
requires-python = ">=3.6"
dependencies = [
    "ipdb>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/ywatanabe/cipdb"
Repository = "https://github.com/ywatanabe/cipdb"
Documentation = "https://github.com/ywatanabe/cipdb"
Issues = "https://github.com/ywatanabe/cipdb/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "pytest-testmon>=2.0.0",
    "ruff>=0.7.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py36"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src/cipdb",
    "--cov-report=term-missing",
    "--cov-report=html:tests/reports/htmlcov",
]
